add cards & buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,11 @@ body {
     background-color: #512DAB;
     
 }
+
+.bc{
+    background-color: #B8860B;
+}
+
+.btn-space {
+    margin-right: 5px;
+}
