--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,9 @@ body {
     margin-right: 5px;
 }
 
+.tab-content {
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+    padding: 10px;
+}
